# pytorch-fit-system

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  all.json  pyproject.toml  test_scrape.py
.careerlens-chrome-cdp/: Local State
.careerlens-chrome-cdp/Default/: BrowsingTopicsState  DIPS  Favicons  History  Login Data  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences  Top Sites  Web Data
.careerlens-chrome-cdp/GrShaderCache/: data_0  data_1  data_2  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  f_000018  f_000019  f_00001a  f_00001b  f_00001c  f_00001d  f_00001e  f_00001f  f_000020  f_000021  f_000022  f_000023  f_000024  f_000025  (+68 more)
.careerlens-chrome-cdp/Safe Browsing/: ChromeExtMalware.store  UrlBilling.store  UrlBilling.store.4_13426881685462461  UrlBilling.store.4_13426883462671318  UrlCsdAllowlist.store  UrlCsdDownloadAllowlist.store  UrlHighConfidenceAllowlist.store  UrlMalBin.store  UrlMalBin.store.4_13426881685457171  UrlMalBin.store.4_13426883462663364  UrlMalware.store  UrlMalware.store.4_13426881685443750  UrlMalware.store.4_13426883462647482  UrlSoceng.store  UrlSubresourceFilter.store  UrlSubresourceFilter.store.4_13426879914904611  UrlSuspiciousSite.store  UrlSuspiciousSite.store.4_13426879914863773  UrlUws.store  UrlUws.store.4_13426881685451339  UrlUws.store.4_13426883462655274
.careerlens-chrome-cdp/ShaderCache/: data_1  index
.careerlens-chrome-cdp/segmentation_platform/: ukm_db
benchmarks/scraper_token_cost/: README.md  benchmark.py
config/: README.md  regex_patterns.json  roles.json  social.example.yaml
config/assets/: README.md
config/templates/: README.md  resume.html.j2  resume.md.j2  resume.tex.j2
docs/: CLIENT-SCRAPING.md  COMPETITION-INTEL.md  DATA-MODEL.md  JOB-APPLICATION-AGENT.md  ORG-OPERATIONS.md  POINTS-ENGINE.md  PROFILE-SCRAPER-AGENT.md  SPECIFICATION.md  TASKS.md  web-auth-setup.md
docs/departments/: README.md
platform/grades/: README.md  index.ts  inject-run.ts  logic.test.ts  logic.ts  resume-injection.ts  run.ts  scraper.ts  session-login.ts  types.ts
platform/org-ops/: README.md  approval.ts  briefs.ts  documents.ts  downstream.ts  ingest.ts  pipeline.ts  routing.ts  scoring.ts  types.ts
platform/web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
scripts/: board_tasks.json  issuesify_board.py  prune_drafts.py  sync_board.py
src/org_ops/: __init__.py
src/resume_builder/: README.md  __init__.py  cli.py  (+4 more)
tests/: conftest.py
tools/: board_export.py  visualize_rule_tags.py
(+1486 files in other folders)
