[project]
name = "resume-build-chopper"
version = "0.1.0"
description = "AI-powered (or static) resume builder that mines GitHub repos and personal docs to produce role-targeted resumes."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Drew" }]
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "jinja2>=3.1",
    "pypdf>=4.2",
    "python-docx>=1.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "reportlab>=4.2",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "requests>=2.32",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
social = ["curl_cffi>=0.7"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.5",
]

[project.scripts]
resume-build = "resume_builder.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resume_builder"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
